users can now join a team. someone who creates a team is automatically added as a member

--- a/TODO
+++ b/TODO
@@ -3,6 +3,6 @@ Todo List:
   ☐ Refactor views (DRY up repeated partials)
   ☐ Merge flash_errors and object_errors into one partial
   ✔ Set default team image when URL not provided by user @done(19-01-26 15:33)
-  ☐ Allow users to join a team (create user_teams)
+  ✔ Allow users to join a team (create user_teams) @done(19-01-26 16:52)
   ☐ Team creator can remove user's from the team, individuals can remove themselves as well
   ☐ Take a break and comment code
