team TODO complete

--- a/TODO
+++ b/TODO
@@ -4,5 +4,5 @@ Todo List:
   ☐ Merge flash_errors and object_errors into one partial
   ✔ Set default team image when URL not provided by user @done(19-01-26 15:33)
   ✔ Allow users to join a team (create user_teams) @done(19-01-26 16:52)
-  ☐ Team creator can remove user's from the team, individuals can remove themselves as well
+  ✔ Team creator can remove user's from the team, individuals can remove themselves as well @done(19-01-26 17:29)
   ☐ Take a break and comment code
