--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ Todo List:
   ☐ Refactor views (DRY up repeated partials)
   ☐ Merge flash_messages and object_errors into one partial
   ☐ Take a break and comment code
-  ☐ Continuous integration service to automate testing before deployment (Travis CI)
+  ✔ Continuous integration service to automate testing before deployment (Travis CI) @done(19-01-27 21:11)
   ☐ Change auto deploys to wait until tests pass
   ☐ Complete UI layout
   ☐ Complete feature tests for all major functions of the web app
