--- a/TODO
+++ b/TODO
@@ -4,10 +4,10 @@ Todo List:
   ✔ Allow users to join a team (create user_teams) @done(19-01-26 16:52)
   ✔ Team creator can remove user's from the team, individuals can remove themselves as well @done(19-01-26 17:29)
   ✔ Automatic deploys to Heroku @done(19-01-27 20:41)
+  ✔ Continuous integration service to automate testing before deployment (Travis CI) @done(19-01-27 21:11)
+  ✔ Change auto deploys to wait until tests pass @done(19-01-27 21:25)
   ☐ Refactor views (DRY up repeated partials)
   ☐ Merge flash_messages and object_errors into one partial
   ☐ Take a break and comment code
-  ✔ Continuous integration service to automate testing before deployment (Travis CI) @done(19-01-27 21:11)
-  ☐ Change auto deploys to wait until tests pass
   ☐ Complete UI layout
   ☐ Complete feature tests for all major functions of the web app
