--- a/TODO
+++ b/TODO
@@ -8,6 +8,6 @@ Todo List:
   ✔ Change auto deploys to wait until tests pass @done(19-01-27 21:25)
   ☐ Refactor views (DRY up repeated partials)
   ☐ Merge flash_messages and object_errors into one partial
-  ☐ Take a break and comment code @started(19-01-28 15:12)
+  ☐ Take a break and comment code
   ☐ Complete UI layout
   ☐ Complete feature tests for all major functions of the web app
