--- a/TODO
+++ b/TODO
@@ -6,9 +6,10 @@ Todo List:
   ✔ Automatic deploys to Heroku @done(19-01-27 20:41)
   ✔ Continuous integration service to automate testing before deployment (Travis CI) @done(19-01-27 21:11)
   ✔ Change auto deploys to wait until tests pass @done(19-01-27 21:25)
-  ☐ Complete feature tests for all major functions of the web app @started(19-01-29 19:37)
-  ☐ Implement Materialize instead of Bootstrap
-  ☐ Complete UI layout
+  ☐ Refactor controllers - DRY code up @started(19-01-31 19:38)
+  ☐ Complete feature tests for all major functions of the web app
   ☐ Refactor views (DRY up repeated partials)
   ☐ Merge flash_messages and object_errors into one partial
   ☐ Take a break and comment code
+  ✘ Implement Materialize instead of Bootstrap (Possibly wait until React) @cancelled(19-01-31 19:37)
+  ✘ Complete UI layout (Possibly wait until React) @cancelled(19-01-31 19:37)
